--- a/SnapshotsAppSignalR/Client/_Imports.razor
+++ b/SnapshotsAppSignalR/Client/_Imports.razor
@@ -5,4 +5,4 @@
 @using Microsoft.JSInterop
 @using SnapshotsAppSignalR.Client
 @using SnapshotsAppSignalR.Client.Shared
-@using ChartJs.Blazor;
+@using Blazorise
