--- a/SnapshotsAppSignalR/Client/_Imports.razor
+++ b/SnapshotsAppSignalR/Client/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.JSInterop
 @using SnapshotsAppSignalR.Client
 @using SnapshotsAppSignalR.Client.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Charts
